# Backend

./: .gitignore  .replit  README.md  gunicorn.sh  manage.py  pyproject.toml  replit.nix  requirements.txt
givito/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
givito/account/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
givito/account/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
givito/chat/: apps.py
givito/feature/: apps.py
givito/product/: apps.py
givito/service/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
givito/service/migrations/: 0001_initial.py  0002_projectregistrant_project.py  0003_alter_projectregistrant_project_and_more.py  0004_projectregistrant_status.py  0005_rename_user_projectregistrant_owner.py  0006_rename_registrant_uuid_project_registrant_and_more.py
givito/transaction/: apps.py
