[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Alfian Badrul Isnan (BE_EM3) <alfian.badrul@ui.ac.id>"]
description = "GivitooMe Sites"
name = "givitoo-me"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^4.1.0"
python = "^3.9"
[tool.poetry.dev-dependencies]
